# overture2gmns

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: README.md  config.py  mpo_config.py  pull_overture_for_mpo.py  run_all.py  step1_osm2gmns.py  step2_overture2gmns.py  step3_compare.py  step4_gmns_ready.py  step5_taplite.py  step6_side_by_side_map.py  step7_mpo_qaqc.py  step8_mapmatch.py  step9_tokenize.py
examples/: basic_usage.py
src/overture2gmns/: __init__.py  cli.py  converter.py  defaults.py  downloader.py  io.py  models.py  postprocess.py  rules.py
tests/: test_coerce.py  test_converter.py  test_postprocess.py
tests/fixtures/: connectors.geojson  segments.geojson
